--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>
       
         <div class="nav-item" >
-          <div><img class="logo" src="/eilogo.webp"></div>
+          <div><img class="logo" src="./assets/images/eilogo.webp"></div>
         </div>
         
           <ul class="nav-item flex nav-list">
