fixed galery item

--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
         </div>
     </section>
     <section class="galery">
-        <h2>Galery</h2>
+        
+        <h2 class="galeryTitle">Galery</h2>
         <div class="carousel">
             
             <div class="carousel-images">
