cofigured color vars

--- a/index.html
+++ b/index.html
@@ -87,6 +87,20 @@
         </div>
         
     </section>
+
+    <section class="testimonials">
+        <div class="card testomonialcard">
+            <div class="cardHeader">
+                <p>Testimonials</p>
+            </div>
+            <div>
+                <ul>
+                    <li></li>
+                </ul>
+            </div>
+
+        </div>
+    </section>
     <script src="./assets/scripts/server.js"></script>
   </body>
 </html>
