--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a class="nav-hover" href="#">Home |</a></li>
             <li><a class="nav-hover" href="#services">Services  |</a></li>
             <li><a class="nav-hover" href="#testimonials">Reviews |</a></li>
-            <li><a class="nav-hover" href="#galery">Galary   |</a></li>
+            <li><a class="nav-hover" href="#galery">Gallery   |</a></li>
             <li><a class="nav-hover" href="#footer">About Us   |</a></li>
             <li><a class="nav-hover" href="#">Contact |</a></li>
           </ul>
@@ -47,7 +47,7 @@
                     <li>Storefront Sign Lighting</li>
                     <li>Wiring for Cable and Data</li>
                     <li>Project Estimations</li>
-                    <li>Project Managment</li>
+                    <li>Project Management</li>
                     <li>Creative Solutions</li>
                 </ul>
 
@@ -62,10 +62,10 @@
                     <li>24/7 Emergency Services</li>
                     <li>Panel Installation and Upgrades</li>
                     <li>Lighting Systems</li>
-                    <li>Landscape Lighting installation/Repair</li>
+                    <li>Landscape Lighting Installation/Repair</li>
                     <li>Generator Installation/Repair</li>
                     <li>Upgrading Electrical Components</li>
-                    <li>Chandelear Installation</li>
+                    <li>Chandelier Installation</li>
                     <li>Security Lighting</li>
                     <li>Creative Solutions</li>
                 </ul>
@@ -75,7 +75,7 @@
     </section>
     <section class="galery" id="galery">
         
-        <h2 class="galeryTitle">Galery</h2>
+        <h2 class="galeryTitle">Gallery</h2>
         <div class="carousel">
             
             <div class="carousel-images">
@@ -96,7 +96,7 @@
             </div>
             <div class="cardList cardListTest">
                 <ul class="cardlistele testimonialList">
-                    <li class="listitem"><span class="customerName">  Mary T  :</span> On time, very professional, they knew what they were doing. Very friendly and did they work in a prompt fashion.</li>
+                    <li class="listitem"><span class="customerName">  Mary T  </span> On time, very professional, they knew what they were doing. Very friendly and did they work in a prompt fashion.</li>
 
                     <li class="listitem"><span class="customerName">  Cheryl K </span>Mike and Scott did a great job with installing new recessed lighting and wall sconces in our master bath and some other electrical work. Very professional, personable and friendly. Responsive to our needs and came up with good suggestions. We would definitely use them again. </li>
 
@@ -177,7 +177,7 @@
     <footer class="footer" id="footer">
         <h2 class="footerTitle">About Us</h2>
         <h2>Electricl Innovations</h2>
-        <p>Serving North East Ohio and greater Cleveland Area</p>
+        <p>Serving North East Ohio and Greater Cleveland Area</p>
         <p>Located in Willowick Ohio</p>
     </footer>
     <script src="./assets/scripts/server.js"></script>
