--- a/index.html
+++ b/index.html
@@ -79,25 +79,20 @@
           <div class="carousel">
             <!-- Description Container -->
             <div class="carousel-description">
-              <p id="description-text">Description for Image 1</p>
+              <p id="description-text"></p>
             </div>
             <!-- Images -->
             <div class="carousel-images">
               <img src="./assets/images/EIVan.jpeg" alt="Electrical Innovations Van">
               <img src="./assets/images/eiimage2.jpeg" alt="Electrical Equipment in Action">
               <img src="./assets/images/EIimage1.jpeg" alt="Team Working">
-              <img src="./assets/images/EIimage3.jpeg" alt="Completed Project">
+              <img src="./assets/images/eiimage3.jpeg" alt="Completed Project">
               <img src="./assets/images/eiimage4.jpeg" alt="Electrical Equipment in Action">
               <img src="./assets/images/eiimage4.5.jpeg" alt="Electrical Equipment in Action">
               <img src="./assets/images/eiimage5.jpeg" alt="Electrical Equipment in Action">
               <img src="./assets/images/eiimage6.jpeg" alt="Electrical Equipment in Action">
               <img src="./assets/images/eiimage7.jpeg" alt="Electrical Equipment in Action">
               <img src="./assets/images/eiimage8.jpeg" alt="Electrical Equipment in Action">
-
-
-
-
-
             </div>
             <!-- Navigation Buttons -->
             <button class="prev">&lt;</button>
