--- a/index.html
+++ b/index.html
@@ -211,6 +211,24 @@
         <h2>Electricl Innovations</h2>
         <p>Serving North East Ohio and Greater Cleveland Area</p>
         <p>Located in Willowick Ohio</p>
+        <style>
+            @keyframes colorChange {
+              0% { text-shadow: 2px 2px 10px rgb(0, 217, 255); }
+              20% { text-shadow: 2px 2px 10px yellow; }
+              40% { text-shadow: 2px 2px 10px orange; }
+              60% { text-shadow: 2px 2px 10px white; }
+              80% { text-shadow: 2px 2px 10px pink; }
+              100% { text-shadow: 2px 2px 10px green; }
+            }
+          </style>
+        <p style="
+            margin-left: 50%;
+            color: rgb(226, 225, 225);
+            font-size: 14px;
+            font-family: Arial, sans-serif;
+            animation: colorChange 5s infinite;">
+            Twisted Repo Productions
+        </p>
     </footer>
     <script src="./assets/scripts/server.js"></script>
   </body>
