--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <h2 class="headerTitle">Commercial Services</h2>
                 
             </div>
-            <div class="cardList">
+            <div class="cardList cardlistserv">
                 <ul class="cardlistele">
                     <li>24/7 Emergency Services</li>
                     <li>Panel Installation and Upgrades</li>
@@ -57,7 +57,7 @@
             <div class="cardHeader">
                <h2>Residential Services</h2> 
             </div>
-            <div class="cardList">
+            <div class="cardList cardlistserv">
                 <ul class="cardlistele">
                     <li>24/7 Emergency Services</li>
                     <li>Panel Installation and Upgrades</li>
@@ -217,7 +217,7 @@
               20% { text-shadow: 2px 2px 10px yellow; }
               40% { text-shadow: 2px 2px 10px orange; }
               60% { text-shadow: 2px 2px 10px white; }
-              80% { text-shadow: 2px 2px 10px pink; }
+              80% { text-shadow: 2px 2px 10px rgb(252, 4, 45); }
               100% { text-shadow: 2px 2px 10px green; }
             }
           </style>
