changed a few fonts

--- a/public/index.html
+++ b/public/index.html
@@ -255,6 +255,6 @@
             Twisted Repo Productions
         </p>
     </footer>
-    <script src="./index.js"></script>    
+    <script src="/index.js"></script>    
   </body>
 </html>
