add a few items

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Electrical Innovations Home Page</title>
+    <meta name="description" content="Electrical Innovations LLC provides expert residential and commercial electrical services in Northeast Ohio. Contact us for lighting, wiring, and repair services.">
+    <title>Electrical Innovations LLC | Expert Electrical Contractors in Northeast Ohio</title>
     <link rel="stylesheet" type="text/css" href="/css/styles.css" />
   </head>
   <body>
@@ -52,8 +53,11 @@
 
     <section class="titletext">
       <h1 class="title">Electrical Innovations LLC</h1>
+      <h2 class="subtitle">Your Trusted Electrical Contractors in Northeast Ohio</h2>
       <h2 class="subtitle">Where Excellence is our Standard</h2>
-      <p class="subsubtitle">North East Ohio's Premire Electrical Contractor</p>
+      <h3 class="subtitle">Residential and Commercial Electrical Services</h3>
+      <h3 class="subsubtitle">North East Ohio's Premire Electrical Contractor</h3>
+      
     </section>
     <section class="servicesSection" id="services">
         <div class="card commercialServices">
